--- a/widgets/chartjs/chartjs.html
+++ b/widgets/chartjs/chartjs.html
@@ -1,2 +1,5 @@
 <div class="header" data-bind="title"></div>
 <canvas data-bind-id="id" data-bind-data-height="height | default 200" data-bind-data-width="width | default 200"></canvas>
+
+<p class="more-info" data-bind="moreinfo"></p>
+
