--- a/widgets/datatransfer/datatransfer.html
+++ b/widgets/datatransfer/datatransfer.html
@@ -1,11 +1,11 @@
 <h1 class="title" data-bind="title"></h1>
 
 <h2 class="down-stream">
-  <i data-bind-class="downarrow"></i>&nbsp<span data-bind="downstream | shortenedNumber | prepend prefix | append suffix"></span>
+  <i class="fa fa-arrow-down"></i>&nbsp<span data-bind="downstream | shortenedNumber | prepend prefix | append suffix"></span>
 </h2>
 
 <p class="up-stream">
-  <i data-bind-class="uparrow"></i>&nbsp<span data-bind="upstream"></span>
+  <i class="fa fa-arrow-up"></i>&nbsp<span data-bind="upstream"></span>
 </p>
 
 <p class="unit-info" data-bind="unitinfo"></p>
