--- a/widgets/clock/clock.html
+++ b/widgets/clock/clock.html
@@ -1,3 +1,3 @@
-<h1 data-bind="title"></h1>
-<h3 data-bind="date"></h3>
-<h2 data-bind="time"></h2>
+<h1 class="title" data-bind="title"></h1>
+<h3 class="date" data-bind="date"></h3>
+<h2 class="time" data-bind="time"></h2>
