--- a/widgets/datatransfer/datatransfer.html
+++ b/widgets/datatransfer/datatransfer.html
@@ -8,6 +8,10 @@
   <i class="fa fa-arrow-up"></i>&nbsp<span data-bind="upstream"></span>
 </p>
 
+<p class="totals-info">
+  <i class="fa fa-arrow-down"></i>&nbsp<span data-bind="totaldown | append totalsuffix"></span>
+  <i class="fa fa-arrow-up"></i>&nbsp<span data-bind="totalup | append totalsuffix"></span>
+</p>
 <p class="unit-info" data-bind="unitinfo"></p>
 
 <p class="updated-at" data-bind="updatedAtMessage"></p>
