Refactor datatransfer widget and move total to a new datausage widget

--- a/widgets/chartjs/chartjs.html
+++ b/widgets/chartjs/chartjs.html
@@ -1,4 +1,4 @@
-<div class="header" data-bind="title"></div>
+<h1 class="title" data-bind="title"></h1>
 <canvas data-bind-id="id" data-bind-data-height="height | default 200" data-bind-data-width="width | default 200"></canvas>
 
 <p class="more-info" data-bind="moreinfo"></p>
