--- a/widgets/list/list.html
+++ b/widgets/list/list.html
@@ -1,4 +1,4 @@
-<div class="header" data-bind="title"></div>
+<h1 class="title" data-bind="title"></h1>
 <div class="content">
   <ol>
     <li data-foreach-item="items" data-bind-class="item.color">
