--- a/widgets/meter/meter.html
+++ b/widgets/meter/meter.html
@@ -1,4 +1,4 @@
-<div class="header" data-bind="title"></div>
+<h1 class="title" data-bind="title"></h1>
 <div class="content">
   <input class="meter" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value | shortenedNumber" data-bind-data-min="min" data-bind-data-max="max">
 </div>
