--- a/widgets/meter/meter.html
+++ b/widgets/meter/meter.html
@@ -1,6 +1,9 @@
 <h1 class="title" data-bind="title"></h1>
 <div class="content">
-  <input class="meter" data-angleOffset=-125 data-angleArc=250 data-width=200 data-readOnly=true data-bind-value="value | shortenedNumber" data-bind-data-min="min" data-bind-data-max="max">
+    <input class="meter" data-angleOffset=-125 data-angleArc=250 data-readOnly=true
+           data-bind-data-height="height | default 200" data-bind-data-width="width | default 200"
+           data-bind-value="value | shortenedNumber | prepend prefix | append suffix"
+           data-bind-data-min="min | default 0" data-bind-data-max="max | default 100">
 </div>
 <div class="more-info" data-bind="moreinfo"></div>
 <div class="updated-at" data-bind="updatedAtMessage"></div>
